# Distributed_computing_coursework_HSE_SE

./: .gitignore  README.md
.github/workflows/: ci.yml
deploy/combined/: .env.example  docker-compose.full.yml
deploy/server/: .env.example  README.md  docker-compose.server.yml
deploy/worker/: .env.example  README.md  docker-compose.worker.yml
examples/pi_job/: README.md  entrypoint.py
examples/pipeline_pi_job/: Dockerfile  README.md  entrypoint.py
platform/server-api/: CMakeLists.txt  Dockerfile
platform/server-api/config/: config.json
platform/server-api/db/migrations/: 001_init.sql  002_pipeline_jobs.sql  003_registry_credentials.sql
platform/server-api/include/config/: AppConfig.h
platform/server-api/include/models/: DomainModels.h
platform/server-api/include/reliability/: RecoveryService.h
platform/server-api/include/scheduler/: ISchedulingStrategy.h  WeightedHeterogeneousStrategy.h
platform/server-api/include/services/: CoordinatorService.h
platform/server-api/include/util/: PipelineDocker.h
platform/server-api/src/: main.cpp
platform/server-api/src/config/: AppConfig.cpp
platform/server-api/src/controllers/: ApiController.cpp  ApiController.h
platform/server-api/src/reliability/: RecoveryService.cpp
platform/server-api/src/scheduler/: WeightedHeterogeneousStrategy.cpp
platform/server-api/src/services/: CoordinatorService.cpp
platform/server-api/src/util/: PipelineDocker.cpp
platform/worker-node/: Dockerfile  main.cpp
